Fixed issue where the spill placement buttons in the map would move if the spill form modal resized

--- a/css/less/skin.less
+++ b/css/less/skin.less
@@ -2357,9 +2357,10 @@ nav.navbar{
 
         .map {
             .spill-button, .help-button{
-                left: 1.5em;
-                top: 20em;
+                left: 0.5em;
+                top: 10em;
                 z-index: 1;
+                position: absolute;
 
                 button{
                     background-repeat: no-repeat;
